# ROS

pypyleepy/: CMakeLists.txt  package.xml
pypyleepy/src/: tracer.py  tracer.py~
pypyleepy/srv/: srvPaint.srv  srvRC.srv
team4/: CMakeLists.txt  package.xml
team4/launch/: middle.launch  middle_gazebo.launch  pub_team4_4.launch  pub_team4_4_gazebo.launch
team4/src/: middle.cpp  pub_team4_4.cpp
team4/srv/: srvChangeMode.srv
